@@ -18,10 +18,9 @@ bash picrate2_install.sh # to run default task
 2. Installs JRuby to `/opt`
 3. Uses `update-alternatives` to configure `jruby`, `jgem` and `jirb`
 4. The script checks for `GEM_HOME`, if undefined it modifies `~/.profile` to define `GEM_HOME` and puts gem binaries on your path, at logon.
-5. Installs jdk11 if required sets `JAVA_HOME`, needed to support jruby (--add-opens)
+5. Installs jdk11 if required sets `JAVA_HOME`, needed to support jruby
 6. Creates `~/.gemrc` with `gem: no-document`
-7. Creates `~/.jruby.java_opts` with `--add-opens` to suppress reflective access warnings.
-8. Installs `picrate` gem
+7. Installs `picrate` gem
 To install `picrate_samples` also configures `geanyIDE` for use with `picrate` run
 `picrate --install` in a bash console
 
